# jobgraph

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_PRO.md  deploy.sh  dev.sh  docker-compose.yml  install.bat  pyproject.toml  quickstart.sh  requirements-cloud.txt  requirements-lite.txt  requirements-streamlit.txt  requirements.txt  start.bat  stop.bat  streamlit_app.py
.github/workflows/: ci.yml  release-offline.yml  release.yml
.streamlit/: config.toml
api/: main.py
api/routes/: resume.py
config/: neo4j_schema.cypher  settings.py
data/crawled/: companies.csv  companies.json  jobs.csv  jobs.json  reviews.csv  reviews.json
data/initial/: admin_data.json  companies.json  tencent_jobs.json
docs/: competitive_analysis.md  design.html
installer/linux/: create-installer.sh  create-offline-installer.sh  download-deps.sh
installer/windows/: create-offline-installer.bat  download-deps.bat  jobgraph.iss
scripts/: README.md  benchmark.py  build_offline_linux.sh  build_offline_windows.bat  crawl_data.py  import_from_admin.py  import_initial_data.py  import_jobs.py  import_people.py  import_to_neo4j.py  incremental.py  ingest_document.py  init_neo4j.py  init_sqlite.py  query.py  start_neo4j_local.sh  sync_data.py  update_data.py
scripts/deprecated/: import_generated.py  import_jobs.py  import_with_fusion.py
src/embeddings/: image_embedder.py  text_embedder.py
src/generation/: answer_generator.py
src/graph/: neo4j_client.py  sqlite_client.py  storage_backend.py
src/ingestion/: document_loader.py  incremental.py  pipeline.py
src/jobgraph/: config.py  config_manager.py  graph_manager.py  job_expectation_parser.py  models.py  (+2 more)
tests/: conftest.py  test_config.py  test_license.py  test_models.py
web/: admin.py  jobgraph.py  people_graph.py  streamlit_app.py
(+51 files in other folders)
