[project]
name = "multimodal-graph-rag"
version = "0.1.0"
description = "Multimodal Graph RAG System based on Neo4j"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-neo4j>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    
    # Graph Database
    "neo4j>=5.0.0",
    
    # LLM & Embeddings
    "openai>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
    
    # Multimodal Processing
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    
    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "pdfplumber>=0.11.0",
    
    # Audio/Video
    "openai-whisper>=20231117",
    
    # API & Web
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Cache & Queue
    "redis>=5.0.0",
    
    # Utilities
    "tiktoken>=0.7.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
